force-app/main/default/objects/Prescription__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName></fullName>
    <description>Meow Parlour</description>
    <inlineHelpText>The animal that is prescribed the medicine</inlineHelpText>
    <label>Animal</label>
    <referenceTo></referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>