force-app/main/default/objects/Prescription__c/fields/Date_issued__c.field-meta.xml
<CustomField>
    <fullName>Date_issued__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Meow Parlour</description>
    <inlineHelpText>Date the prescription was issued</inlineHelpText>
    <label>Date issued</label>
    <required>true</required>
    <type>Date</type>
</CustomField>