force-app/main/default/objects/Prescription__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Meow Parlour</description>
    <inlineHelpText>Doctor who authorized the prescription</inlineHelpText>
    <label>Issued By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Veterinarian_Facility__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prescriptions Issued</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>