force-app/main/default/objects/Prescription__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <description>Meow Parlour</description>
    <inlineHelpText>Medication being prescribed to the patient animal</inlineHelpText>
    <label>Medication</label>
    <referenceTo>Medication__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>