force-app/main/default/objects/Prescription__c/fields/Number_of_refills__c.field-meta.xml
<CustomField>
    <fullName>Number_of_refills__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Meow Parlour</description>
    <inlineHelpText>Number of refills at time of issue</inlineHelpText>
    <label>Number of refills</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>