force-app/main/default/objects/Prescription__c/fields/Veterinarian_Facility__c.field-meta.xml
<CustomField>
    <fullName>Veterinarian_Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Meow Parlour</description>
    <inlineHelpText>The prescribing facility</inlineHelpText>
    <label>Veterinarian Facility</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must choose a Veterinarian</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Veterinarian</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>